testsuite/poke.pkl/struct-method-diag-12.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int i;

    method foo = int:
      {
        return i + 1;
      }

    method bar = int:
      {
        fun jorl = int:
        {
          return foo; /* { dg-error "method" } */
        }

        return jorl;
      }
  };
